# JsxposedX

./: README.md  README_CN.md  README_EN.md  pubspec.yaml
.github/workflows/: build-release.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  memory_tool_breakpoint.cpp  memory_tool_breakpoint.h  memory_tool_engine.cpp  memory_tool_engine.h  memory_tool_instruction.cpp  memory_tool_instruction.h  memory_tool_jni.cpp  memory_tool_jni.h  memory_tool_protocol.cpp  memory_tool_protocol.h  memory_tool_reader.cpp  memory_tool_reader.h  memory_tool_scanner.cpp  memory_tool_scanner.h  memory_tool_session.cpp  memory_tool_session.h  memory_tool_utils.cpp  memory_tool_utils.h  memory_tool_value.cpp  memory_tool_value.h
android/app/src/main/cpp/cmake/: patch_keystone_python3.cmake
lib/: main.dart
lib/app/: app_bootstrap.dart
lib/common/pages/: splash_page.dart
lib/common/widgets/: app_bottom_sheet.dart  custom_dIalog.dart  infinite_scroll_list.dart
lib/common/widgets/app_code_editor/: app_code_editor.dart
lib/common/widgets/app_code_editor/styles/: app_code_editor_style.dart
lib/common/widgets/overlay_window/: overlay_panel_dialog.dart  overlay_scene.dart  overlay_window.dart  overlay_window_api.dart  overlay_window_controller.dart  overlay_window_renderer.dart  overlay_window_scope.dart
lib/core/models/: ai_message.dart  ai_message.freezed.dart  page_result.dart  page_result.freezed.dart
lib/core/providers/: theme_provider.dart
lib/core/routes/routes/: home_route.dart
lib/core/themes/: ai_activation_theme.dart
lib/core/utils/: file_picker_util.dart  format_utils.dart  url_helper.dart
lib/feature/ai/data/models/: ai_message_dto.dart  ai_message_dto.freezed.dart  ai_message_dto.g.dart
lib/features/ai/data/models/: ai_config_dto.dart  ai_model_dto.dart  ai_model_dto.freezed.dart  ai_model_dto.g.dart
lib/features/ai/domain/constants/: builtin_ai_config.dart
lib/features/ai/domain/contracts/: ai_chat_environment_adapter.dart  ai_chat_tool_executor_contract.dart  ai_chat_tool_handler.dart  ai_chat_tools_spec.dart
lib/features/ai/domain/environments/: api_manual_chat_environment_adapter.dart  apk_reverse_chat_environment_adapter.dart  apk_reverse_chat_tools_spec.dart  apk_reverse_prompt_builder.dart  apk_reverse_tool_definitions.dart  apk_reverse_tool_handlers.dart
lib/features/ai/domain/models/: ai_chat_environment_snapshot.dart  ai_chat_session_context.dart  ai_model.dart  ai_model.freezed.dart  ai_tool_call.dart  padi_chat_options.dart
lib/features/ai/domain/services/: ai_chat_context_assembler.dart  ai_chat_history_retriever.dart  ai_chat_tool_catalog.dart  ai_pinned_context_extractor.dart  prompt_builder.dart  tool_executor.dart
lib/features/ai/presentation/pages/: ai_reverse_page.dart
lib/features/ai/presentation/runtime/: ai_chat_environment_initializer.dart
lib/features/ai/presentation/states/: ai_chat_action_state.dart  ai_chat_runtime_state.dart
lib/features/memory_tool_overlay/domain/: memory_ai_overlay_chat_tools_spec.dart  memory_ai_overlay_environment_adapter.dart  memory_ai_overlay_prompt_builder.dart  memory_ai_overlay_tool_definitions.dart  memory_ai_overlay_tool_handlers.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
test/common/widgets/overlay_window/: overlay_window_test.dart
(+248 files in other folders)
